data/derived/fa15/progs/unify/prog2260.ml.out
Characters 193-194:
  List.fold_left f base l;;
                        ^
Error: This expression has type string list
       but an expression was expected of type string list list
       Type string is not compatible with type string list 
